feat(storefront): improve customer order history